# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
    "drake_py_unittest",
)
load(
    "@drake//tools/skylark:drake_java.bzl",
    "drake_java_binary",
)
load(
    "@drake//tools/vector_gen:vector_gen.bzl",
    "drake_cc_vector_gen_library",
    "drake_cc_vector_gen_translator_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_package_library(
    name = "automotive",
    deps = [
        ":automotive_simulator",
        ":bicycle_car",
        ":box_car_vis",
        ":calc_ongoing_road_position",
        ":calc_smooth_acceleration",
        ":car_vis",
        ":car_vis_applicator",
        ":create_trajectory_params",
        ":curve2",
        ":driving_command_mux",
        ":generated_translators",
        ":generated_vectors",
        ":idm_controller",
        ":idm_planner",
        ":lane_direction",
        ":maliput_railcar",
        ":mobil_planner",
        ":monolane_onramp_merge",
        ":pose_selector",
        ":prius_vis",
        ":pure_pursuit",
        ":pure_pursuit_controller",
        ":road_odometry",
        ":road_path",
        ":simple_car",
        ":simple_powertrain",
        ":trajectory",
        ":trajectory_car",
        ":trajectory_follower",
        ":trivial_right_of_way_state_provider",
    ],
)

# Keep this list in sync with the list of _AUTOMOTIVE_LCM_SRCS within
# ../lcmtypes/BUILD.bazel.  TODO(jwnimmer-tri) De-duplicate the two lists,
# likely by moving the automotive lcmtypes into their own package.
_LCM_ENABLED_NAMED_VECTORS = [
    "bicycle_car_state.named_vector",
    "driving_command.named_vector",
    "maliput_railcar_state.named_vector",
    "simple_car_state.named_vector",
    "trajectory_car_state.named_vector",
]

drake_cc_vector_gen_library(
    name = "generated_vectors",
    srcs = [
        "bicycle_car_parameters.named_vector",
        "idm_planner_parameters.named_vector",
        "maliput_railcar_params.named_vector",
        "mobil_planner_parameters.named_vector",
        "pure_pursuit_params.named_vector",
        "simple_car_params.named_vector",
        "trajectory_car_params.named_vector",
    ] + _LCM_ENABLED_NAMED_VECTORS,
)

drake_cc_vector_gen_translator_library(
    name = "generated_translators",
    srcs = _LCM_ENABLED_NAMED_VECTORS,
    deps = [
        ":generated_vectors",
        "//lcmtypes:automotive",
    ],
)

drake_cc_library(
    name = "trajectory",
    srcs = ["trajectory.cc"],
    hdrs = ["trajectory.h"],
    deps = [
        "//common/trajectories:piecewise_polynomial",
        "//common/trajectories:piecewise_quaternion",
        "//math:geometric_transform",
        "//multibody/multibody_tree/math:spatial_velocity",
    ],
)

drake_cc_library(
    name = "bicycle_car",
    srcs = ["bicycle_car.cc"],
    hdrs = ["bicycle_car.h"],
    deps = [
        ":generated_vectors",
        "//common:symbolic",
        "//systems/framework:leaf_system",
    ],
)

drake_cc_library(
    name = "box_car_vis",
    srcs = ["box_car_vis.cc"],
    hdrs = ["box_car_vis.h"],
    deps = [
        ":car_vis",
        "//multibody/shapes",
        "//systems/rendering:drake_visualizer_client",
    ],
)

drake_cc_library(
    name = "car_vis",
    srcs = ["car_vis.cc"],
    hdrs = ["car_vis.h"],
    deps = [
        "//lcmtypes:viewer",
        "//systems/rendering:pose_bundle",
    ],
)

drake_cc_library(
    name = "car_vis_applicator",
    srcs = ["car_vis_applicator.cc"],
    hdrs = ["car_vis_applicator.h"],
    deps = [
        ":box_car_vis",
        ":car_vis",
        ":generated_vectors",
        "//lcmtypes:viewer",
        "//systems/framework",
        "//systems/rendering:drake_visualizer_client",
        "//systems/rendering:pose_aggregator",
    ],
)

drake_cc_library(
    name = "create_trajectory_params",
    srcs = ["create_trajectory_params.cc"],
    hdrs = ["create_trajectory_params.h"],
    deps = [
        ":curve2",
        ":trajectory_car",
        "//automotive/maliput/api",
        "//automotive/maliput/dragway",
        "//common:symbolic",
    ],
)

drake_cc_library(
    name = "curve2",
    srcs = ["curve2.cc"],
    hdrs = ["curve2.h"],
    deps = [
        ":generated_vectors",
        "//common:autodiff",
        "//common:autodiffxd_make_coherent",
    ],
)

drake_cc_library(
    name = "driving_command_mux",
    srcs = ["driving_command_mux.cc"],
    hdrs = ["driving_command_mux.h"],
    deps = [
        ":generated_vectors",
        "//common:default_scalars",
        "//systems/framework:leaf_system",
    ],
)

drake_cc_library(
    name = "idm_controller",
    srcs = ["idm_controller.cc"],
    hdrs = ["idm_controller.h"],
    deps = [
        ":calc_ongoing_road_position",
        ":generated_vectors",
        ":idm_planner",
        ":pose_selector",
        "//automotive/maliput/api",
        "//common:default_scalars",
        "//systems/framework:leaf_system",
        "//systems/rendering:pose_bundle",
        "//systems/rendering:pose_vector",
    ],
)

drake_cc_library(
    name = "idm_planner",
    srcs = ["idm_planner.cc"],
    hdrs = ["idm_planner.h"],
    deps = [
        ":generated_vectors",
        "//common:default_scalars",
        "//common:extract_double",
    ],
)

drake_cc_library(
    name = "lane_direction",
    srcs = ["lane_direction.cc"],
    hdrs = ["lane_direction.h"],
    deps = [
        "//automotive/maliput/api",
    ],
)

drake_cc_library(
    name = "maliput_railcar",
    srcs = ["maliput_railcar.cc"],
    hdrs = ["maliput_railcar.h"],
    deps = [
        ":calc_smooth_acceleration",
        ":generated_vectors",
        ":lane_direction",
        "//automotive/maliput/api",
        "//math:geometric_transform",
        "//systems/framework:leaf_system",
        "//systems/rendering:frame_velocity",
        "//systems/rendering:pose_vector",
    ],
)

drake_cc_library(
    name = "mobil_planner",
    srcs = ["mobil_planner.cc"],
    hdrs = ["mobil_planner.h"],
    deps = [
        ":calc_ongoing_road_position",
        ":generated_vectors",
        ":idm_planner",
        ":lane_direction",
        ":pose_selector",
        ":road_odometry",
        "//automotive/maliput/api",
        "//common:cond",
        "//math:saturate",
        "//systems/framework:leaf_system",
        "//systems/rendering:pose_bundle",
        "//systems/rendering:pose_vector",
    ],
)

drake_cc_library(
    name = "monolane_onramp_merge",
    srcs = ["monolane_onramp_merge.cc"],
    hdrs = ["monolane_onramp_merge.h"],
    deps = [
        "//automotive/maliput/api",
        "//automotive/maliput/monolane",
    ],
)

drake_cc_library(
    name = "pose_selector",
    srcs = ["pose_selector.cc"],
    hdrs = ["pose_selector.h"],
    deps = [
        ":lane_direction",
        ":road_odometry",
        "//automotive/maliput/api",
        "//common:autodiffxd_make_coherent",
        "//common:extract_double",
        "//systems/rendering:pose_bundle",
        "//systems/rendering:pose_vector",
    ],
)

drake_cc_library(
    name = "prius_vis",
    srcs = ["prius_vis.cc"],
    hdrs = ["prius_vis.h"],
    data = ["//automotive/models:prod_models"],
    deps = [
        ":car_vis",
        "//common:find_resource",
        "//lcmtypes:viewer",
        "//multibody/joints",
        "//multibody/parsers",
        "//multibody/rigid_body_plant:create_load_robot_message",
        "//systems/rendering:pose_bundle",
        "//systems/rendering:pose_vector",
    ],
)

drake_cc_library(
    name = "pure_pursuit",
    srcs = ["pure_pursuit.cc"],
    hdrs = ["pure_pursuit.h"],
    deps = [
        ":generated_vectors",
        ":lane_direction",
        "//automotive/maliput/api",
        "//common:symbolic",
        "//math:geometric_transform",
        "//math:saturate",
        "//systems/rendering:pose_vector",
    ],
)

drake_cc_library(
    name = "pure_pursuit_controller",
    srcs = ["pure_pursuit_controller.cc"],
    hdrs = ["pure_pursuit_controller.h"],
    deps = [
        ":generated_vectors",
        ":lane_direction",
        ":pure_pursuit",
        "//systems/framework:leaf_system",
        "//systems/rendering:pose_vector",
    ],
)

drake_cc_library(
    name = "road_odometry",
    srcs = ["road_odometry.cc"],
    hdrs = ["road_odometry.h"],
    deps = [
        "//automotive/maliput/api",
        "//systems/rendering:frame_velocity",
    ],
)

drake_cc_library(
    name = "road_path",
    srcs = ["road_path.cc"],
    hdrs = ["road_path.h"],
    deps = [
        ":lane_direction",
        ":monolane_onramp_merge",
        "//automotive/maliput/api",
        "//common:essential",
        "//common:unused",
        "//common/trajectories:piecewise_polynomial",
        "//math:saturate",
    ],
)

drake_cc_library(
    name = "simple_car",
    srcs = ["simple_car.cc"],
    hdrs = [
        "simple_car.h",
    ],
    deps = [
        ":calc_smooth_acceleration",
        ":generated_vectors",
        "//common:cond",
        "//common:double",
        "//common:symbolic",
        "//math:saturate",
        "//systems/framework:leaf_system",
        "//systems/rendering:frame_velocity",
        "//systems/rendering:pose_vector",
    ],
)

drake_cc_library(
    name = "simple_powertrain",
    srcs = ["simple_powertrain.cc"],
    hdrs = ["simple_powertrain.h"],
    deps = [
        "//systems/primitives:linear_system",
    ],
)

drake_cc_library(
    name = "calc_ongoing_road_position",
    srcs = ["calc_ongoing_road_position.cc"],
    hdrs = ["calc_ongoing_road_position.h"],
    deps = [
        ":pose_selector",
        "//automotive/maliput/api",
        "//common:autodiff",
        "//common:default_scalars",
        "//common:symbolic",
        "//systems/rendering:frame_velocity",
        "//systems/rendering:pose_vector",
    ],
)

drake_cc_library(
    name = "calc_smooth_acceleration",
    srcs = ["calc_smooth_acceleration.cc"],
    hdrs = ["calc_smooth_acceleration.h"],
    deps = [
        "//common:autodiff",
        "//common:symbolic",
    ],
)

drake_cc_library(
    name = "trajectory_follower",
    srcs = ["trajectory_follower.cc"],
    hdrs = ["trajectory_follower.h"],
    deps = [
        ":generated_vectors",
        ":trajectory",
        "//common:autodiff",
        "//common:extract_double",
        "//systems/framework:leaf_system",
        "//systems/rendering:frame_velocity",
        "//systems/rendering:pose_vector",
    ],
)

drake_cc_library(
    name = "trajectory_car",
    srcs = ["trajectory_car.cc"],
    hdrs = ["trajectory_car.h"],
    deps = [
        ":calc_smooth_acceleration",
        ":curve2",
        ":generated_vectors",
        "//common:autodiff",
        "//common:extract_double",
        "//systems/framework:leaf_system",
        "//systems/rendering:frame_velocity",
        "//systems/rendering:pose_vector",
    ],
)

drake_cc_library(
    name = "trivial_right_of_way_state_provider",
    srcs = [
        "trivial_right_of_way_state_provider.cc",
    ],
    hdrs = [
        "trivial_right_of_way_state_provider.h",
    ],
    deps = [
        "//automotive/maliput/api",
        "//common:essential",
    ],
)

drake_cc_library(
    name = "automotive_simulator",
    srcs = ["automotive_simulator.cc"],
    hdrs = ["automotive_simulator.h"],
    deps = [
        ":car_vis_applicator",
        ":driving_command_mux",
        ":generated_translators",
        ":generated_vectors",
        ":idm_controller",
        ":lane_direction",
        ":maliput_railcar",
        ":mobil_planner",
        ":prius_vis",
        ":pure_pursuit_controller",
        ":simple_car",
        ":trajectory_car",
        ":trivial_right_of_way_state_provider",
        "//automotive/maliput/api",
        "//automotive/maliput/utility",
        "//common:temp_directory",
        "//lcm",
        "//multibody/parsers",
        "//multibody/rigid_body_plant:drake_visualizer",
        "//systems/analysis",
        "//systems/lcm:lcm_pubsub_system",
        "//systems/lcm:lcmt_drake_signal_translator",
        "//systems/primitives:constant_value_source",
        "//systems/rendering:pose_aggregator",
        "//systems/rendering:pose_bundle_to_draw_message",
    ],
)

drake_cc_binary(
    name = "automotive_demo",
    srcs = [
        "automotive_demo.cc",
    ],
    data = [
        "//automotive/models:prod_models",
    ],
    deps = [
        ":automotive_simulator",
        ":create_trajectory_params",
        ":monolane_onramp_merge",
        "//automotive/maliput/dragway",
        "//common:text_logging_gflags",
        "//lcm",
    ],
)

drake_cc_binary(
    name = "car_sim_lcm",
    srcs = [
        "car_sim_lcm.cc",
        "car_sim_lcm_common.cc",
        "car_sim_lcm_common.h",
    ],
    add_test_rule = 1,
    data = [
        "//automotive/models:prod_models",
    ],
    test_rule_args = ["--simulation_sec=0.01"],
    # Flaky because LCM self-test can fail (PR #7311)
    test_rule_flaky = 1,
    deps = [
        ":automotive_simulator",
        "//common:find_resource",
        "//common:text_logging_gflags",
        "//multibody:rigid_body_tree_construction",
        "//multibody/rigid_body_plant",
        "//systems/controllers:pid_controlled_system",
    ],
)

drake_py_binary(
    name = "steering_command_driver",
    srcs = ["steering_command_driver.py"],
    deps = [
        "//lcmtypes:lcmtypes_py",
        "@lcm//:lcm-python",
    ],
)

drake_java_binary(
    name = "lcm-spy",
    main_class = "lcm.spy.Spy",
    runtime_deps = [
        "//lcmtypes:lcmtypes_drake_java",
    ],
)

drake_py_binary(
    name = "demo",
    srcs = ["automotive_demo.py"],
    data = [
        ":automotive_demo",
        ":lcm-spy",
        ":steering_command_driver",
        "//tools:drake_visualizer",
        "@lcm//:lcm-logger",
    ],
    main = "automotive_demo.py",
    deps = [
        "@lcm//:lcm-python",
    ],
)

# === test/ ===

drake_cc_library(
    name = "autodiff_test_utilities",
    testonly = 1,
    hdrs = ["test/autodiff_test_utilities.h"],
    visibility = ["//visibility:private"],
    deps = [
        "//common:autodiff",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_googletest(
    name = "trajectory_test",
    deps = [
        "//automotive:trajectory",
        "//common/test_utilities:eigen_matrix_compare",
        "//systems/framework/test_utilities",
    ],
)

drake_cc_googletest(
    name = "automotive_simulator_test",
    data = ["//automotive/models:prod_models"],
    # Flaky because LCM self-test can fail (PR #7311)
    flaky = 1,
    deps = [
        "//automotive:automotive_simulator",
        "//automotive:create_trajectory_params",
        "//automotive/maliput/dragway",
        "//lcm:mock",
    ],
)

drake_cc_googletest(
    name = "bicycle_car_test",
    deps = [
        "//automotive:bicycle_car",
        "//common/test_utilities:eigen_matrix_compare",
        "//systems/framework/test_utilities",
    ],
)

drake_cc_googletest(
    name = "box_car_vis_test",
    deps = [
        ":box_car_vis",
        "//common/test_utilities:eigen_matrix_compare",
        "//systems/rendering:pose_vector",
    ],
)

drake_cc_googletest(
    name = "car_vis_applicator_test",
    deps = [
        ":car_vis_applicator",
        "//common/test_utilities:eigen_matrix_compare",
        "//math:geometric_transform",
    ],
)

drake_cc_googletest(
    name = "curve2_test",
    deps = [
        "//automotive:curve2",
    ],
)

drake_cc_googletest(
    name = "driving_command_mux_test",
    deps = [
        ":driving_command_mux",
        "//systems/framework",
        "//systems/framework/test_utilities",
    ],
)

drake_cc_googletest(
    name = "maliput_railcar_test",
    deps = [
        "//automotive:maliput_railcar",
        "//automotive/maliput/api",
        "//automotive/maliput/dragway",
        "//automotive/maliput/monolane",
        "//common/test_utilities:eigen_matrix_compare",
        "//math:geometric_transform",
    ],
)

drake_cc_googletest(
    name = "monolane_onramp_merge_test",
    deps = [
        ":monolane_onramp_merge",
        "//automotive/maliput/utility",
    ],
)

drake_cc_googletest(
    name = "simple_car_test",
    deps = [
        "//automotive:simple_car",
        "//common/test_utilities:eigen_matrix_compare",
        "//systems/framework/test_utilities",
    ],
)

drake_cc_googletest(
    name = "idm_controller_test",
    deps = [
        "//automotive:idm_controller",
        "//automotive:monolane_onramp_merge",
        "//automotive/maliput/dragway",
        "//common/test_utilities:eigen_matrix_compare",
        "//systems/framework/test_utilities:scalar_conversion",
    ],
)

drake_cc_googletest(
    name = "idm_planner_test",
    deps = [
        "//automotive:autodiff_test_utilities",
        "//automotive:idm_planner",
        "//common:extract_double",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_googletest(
    name = "mobil_planner_test",
    deps = [
        "//automotive:mobil_planner",
        "//automotive/maliput/dragway",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_googletest(
    name = "pose_selector_test",
    deps = [
        "//automotive:monolane_onramp_merge",
        "//automotive:pose_selector",
        "//automotive/maliput/dragway",
        "//automotive/maliput/monolane:builder",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_googletest(
    name = "prius_vis_test",
    deps = [
        ":prius_vis",
        "//common/test_utilities:eigen_matrix_compare",
        "//math:geometric_transform",
    ],
)

drake_cc_googletest(
    name = "road_path_test",
    deps = [
        ":road_path",
        "//automotive/maliput/dragway",
        "//automotive/maliput/monolane",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_googletest(
    name = "pure_pursuit_test",
    deps = [
        "//automotive:pure_pursuit",
        "//automotive/maliput/dragway",
        "//automotive/maliput/multilane",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_googletest(
    name = "pure_pursuit_controller_test",
    deps = [
        "//automotive:pure_pursuit_controller",
        "//automotive/maliput/dragway",
        "//systems/framework/test_utilities",
    ],
)

drake_cc_googletest(
    name = "simple_powertrain_test",
    deps = [
        "//automotive:simple_powertrain",
        "//systems/framework/test_utilities",
    ],
)

drake_cc_googletest(
    name = "calc_smooth_acceleration_test",
    deps = [
        "//automotive:calc_smooth_acceleration",
        "//common:essential",
    ],
)

drake_cc_googletest(
    name = "calc_ongoing_road_position_test",
    deps = [
        "//automotive:calc_ongoing_road_position",
        "//automotive:monolane_onramp_merge",
        "//automotive/maliput/dragway",
        "//common:essential",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_googletest(
    name = "trajectory_follower_test",
    deps = [
        "//automotive:trajectory_follower",
        "//common:extract_double",
        "//systems/analysis:simulator",
        "//systems/framework/test_utilities",
    ],
)

drake_cc_googletest(
    name = "trajectory_car_test",
    deps = [
        "//automotive:autodiff_test_utilities",
        "//automotive:trajectory_car",
        "//common:extract_double",
        "//systems/analysis:simulator",
        "//systems/framework/test_utilities",
    ],
)

drake_cc_googletest(
    name = "trajectory_optimization_test",
    # Test timeout increased to not timeout when run with Valgrind.
    timeout = "moderate",
    # Disable IPOPT for this example due to test timeouts on Mac-Clang-Bazel
    # builds (see #6223).
    tags = ["snopt"],
    deps = [
        ":simple_car",
        "//common/proto:call_matlab",
        "//common/test_utilities:eigen_matrix_compare",
        "//systems/trajectory_optimization:direct_collocation",
    ],
)

drake_cc_googletest(
    name = "trivial_right_of_way_state_provider_test",
    deps = [
        ":trivial_right_of_way_state_provider",
        "//automotive/maliput/api/test_utilities:rules_test_utilities",
    ],
)

drake_py_unittest(
    name = "steering_command_driver_test",
    flaky = 1,
    deps = [
        ":steering_command_driver",
        "@lcm//:lcm-python",
    ],
)

sh_test(
    name = "demo_dry_run_test",
    size = "small",
    srcs = ["test/demo_test.sh"],
    args = [
        "--driving_command_gui_names=alpha,beta",
        "--dry-run",
    ],
    data = [":demo"],
)

add_lint_tests()
